cursor-pointer issue fixed

--- a/css/output.css
+++ b/css/output.css
@@ -594,6 +594,19 @@ video {
   width: 66.666667%;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.list-none {
+  list-style-type: none;
+}
+
 .gap-2 {
   gap: 0.5rem;
 }
@@ -640,6 +653,11 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
